--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@taqueria/plugin-core": "^0.28.0",
     "@taqueria/plugin-flextesa": "^0.28.0",
     "@taqueria/plugin-smartpy": "^0.28.0",
-    "@taqueria/plugin-taquito": "^0.28.0"
+    "@taqueria/plugin-taquito": "^0.28.0",
+    "@tsconfig/node16": "^1.0.3"
+  },
+  "dependencies": {
+    "@taquito/signer": "^15.1.0",
+    "@taquito/taquito": "^15.1.0"
   }
 }
