--- a/.taq/config.json
+++ b/.taq/config.json
@@ -76,6 +76,14 @@
         {
             "type": "npm",
             "name": "@taqueria/plugin-contract-types"
+        },
+        {
+            "type": "npm",
+            "name": "@taqueria/plugin-metadata"
+        },
+        {
+            "type": "npm",
+            "name": "@taqueria/plugin-ipfs-pinata"
         }
     ]
 }
