--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@taqueria/plugin-contract-types": "^0.28.4",
     "@taqueria/plugin-core": "^0.28.0",
     "@taqueria/plugin-flextesa": "^0.28.0",
+    "@taqueria/plugin-ipfs-pinata": "^0.28.4",
     "@taqueria/plugin-jest": "^0.28.4",
+    "@taqueria/plugin-metadata": "^0.28.4",
     "@taqueria/plugin-smartpy": "^0.28.0",
     "@taqueria/plugin-taquito": "^0.28.0",
     "@tsconfig/node16": "^1.0.3"
