--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "PYTHONPATH=\"./\" taq compile ${npm_config_file}",
+    "deploy:all": "ts-node deploy.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
