--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "PYTHONPATH=\"./\" taq compile ${npm_config_file}",
+    "compile": "PYTHONPATH=\"./\" taq compile ${npm_config_file} --json",
     "deploy:all": "ts-node deploy.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
