--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "PYTHONPATH=\"./\" taq compile ${npm_config_file}",
+    "compile:json": "PYTHONPATH=\"./\" taq compile ${npm_config_file} --json",
     "deploy:all": "ts-node deploy.ts",
     "types": "taq generate types",
     "test": "echo \"Error: no test specified\" && exit 1"
