--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -28,10 +28,10 @@
     "@tezos-dappetizer/utils": "^2.7.1",
     "bignumber.js": "^9.1.1",
     "pg": "^8.10.0",
-    "sqlite3": "^5.1.6",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "rimraf": "^4.4.1",
     "typescript": "^4.9.5"
   }
