--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf ./dist",
-    "build": "tsc -p ./tsconfig.json"
+    "build": "tsc -p ./tsconfig.json",
+    "start": "dappetizer start"
   },
   "repository": {
     "type": "git",
