--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "symmetric-tezos-contracts",
   "version": "1.0.0",
-  "description": "",
+  "description": "<h2 align=\"center\">Work in progress</h2>",
   "main": "index.js",
   "scripts": {
     "compile": "PYTHONPATH=\"./\" taq compile ${npm_config_file}",
@@ -32,5 +32,16 @@
   "workspaces": [
     "packages/indexer",
     "packages/sdk"
-  ]
+  ],
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/centfinance/Symmetric.CoreContracts-v2-Tezos.git"
+  },
+  "bugs": {
+    "url": "https://github.com/centfinance/Symmetric.CoreContracts-v2-Tezos/issues"
+  },
+  "homepage": "https://github.com/centfinance/Symmetric.CoreContracts-v2-Tezos#readme"
 }
