Deploy No Admin version of Weighted Pool Factory and Base Pool Factory 🚀

--- a/.taq/config.json
+++ b/.taq/config.json
@@ -44,7 +44,7 @@
         "testing": {
             "type": "simple",
             "label": "ghostnet",
-            "rpcUrl": "https://ghostnet.ecadinfra.com"
+            "rpcUrl": "https://rpc.tzkt.io/ghostnet/"
         },
         "production": {
             "type": "simple",
